Closed Bug 1173415 Opened 9 years ago Closed 9 years ago

Fix incorrect mask used for nsBidi::mFlags

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox39 --- unaffected
firefox40 --- affected
firefox41 --- fixed

People

(Reporter: mbrubeck, Assigned: mbrubeck)

References

Details

(Keywords: rtl)

Attachments

(1 file)

Attached patch patchSplinter Review
LRI and RLI are values of type DirProp (uint8_t).  The DIRPROP_FLAG macro is
needed to convert them to bits in the 32-bit `flags` variable.

[Tracking Requested - why for this release]: This is a low-risk fix for a bug in a new feature introduced in Firefox 40 (bug 1157726).
Attachment #8620407 - Flags: review?(smontagu)
As Matt indicates this is a low-risk fix, tracking enabled for 40.
Attachment #8620407 - Flags: review?(smontagu) → review+
https://hg.mozilla.org/mozilla-central/rev/c183fabe3b22
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Cancelling tracking; on further thought I don't think this bug leads to any user-visible problems.  In the worst case, in some rare instances it might cause a missed optimization.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: