Bug 1173415 - Fix incorrect mask used for nsBidi::mFlags [r=smontagu]

LRI and RLI are values of type DirProp (uint8_t).  The DIRPROP_FLAG macro is
needed to convert them to bits in the 32-bit `flags` variable.